# FluxedOS

./: .gitignore  Build.sh  BuildHeadless.sh  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MyNewFile.txt  OLDCMAKE.test  README.md  log.txt  visualize.sh
.github/workflows/: c-cpp.yml  codeql-analysis.yml  greetings.yml  main.yml  stale.yml
ISO/: README.md
log/: G++OUTPUT.txt  GccOUTPUT.txt  isoLOG.txt
src/: A++OUTPUT.txt  BUILD.h.gch  LINKOUTPUT.txt  README.md  autocompile.sh  boot.s  func.sh  grub.cfg  install.sh  isoLOG.txt  linker.ld  makeimg.sh  sum.check  temp.h.gch
src/CPU/: cpu.S  cpu.asm  cpu.c  cpu.h  gdt.S  gdt.c  gdt.h  idt.c  idt.h  irq.asm  irq.c  irq.h  isr.asm  isr.c  isr.h
src/Checksum/: sum_new.check  sum_old.check
src/Kernal/: BUILD.h  BUILD.h.gch  CppKern.cpp  CppKern.h  CppKern.h.gch  Kernal.c  Kernal.cpp  Kernal.h  Kernal.h.gch  kernal.cpp-new.txt
src/Kernal/DisplayOut/: displayout.cpp  displayout.h  displayout.h.gch
src/Kernal/IO/: Keyboard.h  Keyboard.h.gch
src/Kernal/String/: String.cpp  String.h  String.h.gch
src/Kernal/Term/: Term.cpp  Term.h  Term.h.gch
src/Kernal/console/: console.cpp  console.h
src/Kernal/core/: core.h  core.h.gch
src/Kernel/: BUILD.b  BUILD.h  BUILD.h.in  BUILD.v  CppKern.cpp  CppKern.h  Kernel.c  Kernel.h  boot.cpp  kernel.cpp  kernel.hpp  multboot.h  runtime.cpp
src/Kernel/System/: multboot.hpp  multiboot.cpp  multibootHeader.h
src/Proc/dir/: idk.cpp
src/Proc/dir/log/: G++OUTPUT.txt
src/Proc/test/: test.cpp
src/Proc/test/log/: G++OUTPUT.txt  LINKOUTPUT.txt
src/System/Clock/PIT/: PIT.cpp  PIT.hpp
src/System/Clock/RTC/: RTC.cpp  RTC.hpp
src/System/CommandHandler/: CommandHandler.cpp  CommandHandler.hpp
src/System/CompilerFixes/: cxa.cpp  cxa.hpp  icxxabi.cpp  icxxabi.h
src/System/Console/: console.cpp  console.hpp
src/System/Disk/: ata.cpp  ata.hpp  vDisk.cpp  vDisk.hpp
src/System/Display/: Display.cpp  Display.hpp
src/System/FPU/: fpu.cpp  fpu.hpp
src/System/Graphics/: built-in-font.h  vbe.cpp  vbe.hpp
src/System/Graphics/DisplayServer/: ds.cpp  ds.hpp
src/System/Keyboard/: keyboard.cpp  keyboard.hpp
src/System/PCI/: pci.cpp  pci.hpp
src/System/Port/: port.cpp  port.hpp
src/System/Power/: Power.cpp  Power.hpp
src/System/Serial/: serial.cpp  serial.hpp
src/System/TextOutput/: TextOutput.cpp  TextOutput.hpp
src/System/VGA/: vga.hpp
src/System/cpu/: cpu.cpp  cpu.hpp
src/System/fs/: ext2.cpp  ext2.hpp  mbt.cpp  mbt.hpp  vfs.cpp  vfs.hpp  vfs_impl.tcc
src/System/kout/: kout.cpp  kout.hpp
src/System/kout/kernelout/: kernelout.cpp  kernelout.hpp
src/System/memory/: MemorySizes.hpp  heap.cpp  heap.hpp  kmemory.cpp  kmemory.hpp  vmm.cpp  vmm.hpp
src/System/memory/paging/: Paging.S  page.cpp  page.hpp
src/System/memory/pmm/: pmm.cpp  pmm.hpp
src/System/memory/staticalloc/: skmalloc.cpp  skmalloc.hpp
src/System/memory/vmm/: vmm.cpp  vmm.hpp
src/System/panic/: panic.cpp  panic.hpp  stack_dump.asm
src/System/tty/: tty.cpp  tty.hpp
src/boot/: KenelEntry.c  bios.s  boot.S  boot.asm  boot.h  boot.s  cppentry.cpp  cpu.s  irq.s  isr.s  kernel.h  loader.c  longmode.asm
src/checksum/:  new.txt   old.txt  09f8e0126764a36489dfec100f1158b9  temp.txt new.txt  2df5ea0438043fb2d22b1035db16ace2  temp.txt new.txt  d41d8cd98f00b204e9800998ecf8427e  temp.txt old.txt  da7e09838080a5fd70d15a68cf994b39  temp.txt new.txt  f113f794444a59656add6d82ba8f5b36  temp.txt new.txt
src/cpu/: cpu.h  gdt.c  gdt.h  idt.c  idt.h  irq.c  irq.h  isr.c  isr.h  pic.cpp  pic.h
src/drive/: drive.h
src/drive/fs/: ext2.cpp  ext2.h
src/isodir/boot/grub/: grub.cfg
src/lib/BundledContext/: BundledContext.cpp  BundledContext.hpp
src/lib/DisplayOut/: displayout.cpp  displayout.h
src/lib/Gtree/: Gtree.cpp  Gtree.h
src/lib/IO/: Keyboard.h  ide.cpp  ide.h  keyboard.cpp  port.cpp  port.h
src/lib/IO/ATA/: ata.cpp  ata.h
src/lib/IO/Serial/: serial.cpp  serial.h
src/lib/PCI/: PCI.cpp  PCI.h
src/lib/SmartPointer/: smartpointer.cpp  smartpointer.hpp
src/lib/StanderdOperations/: Operations.c  Operations.cpp  Operations.h  Operations.hpp
src/lib/String/: String.cpp  String.h
src/lib/Term/: Term.c  Term.cpp  Term.h
src/lib/VGA/: VGA.cpp  VGA.h  cVGA.h
src/lib/Vector/: vector.h
src/lib/Video/vbe/: vbe.cpp  vbe.h
src/lib/VirtualConsole/: VirtualConsole.cpp  VirtualConsole.h
src/lib/assert/: assert.cpp  assert.hpp
src/lib/bitmap/: bitmap.cpp  bitmap.hpp
src/lib/compare/: compare.cpp  compare.h
src/lib/console/: console.cpp  console.h
src/lib/core/: core.c  core.h
src/lib/cpu/: cpu.h
src/lib/hal/: hal.cpp  hal.h
src/lib/list/: list.cpp  list.h
src/lib/math/: math.cpp  math.hpp
src/lib/mem/: mem.cpp  mem.h
src/lib/multiboot/: multiboot.h
src/lib/string/: string.cpp  string.hpp
src/lib/vector/: KernelVector.hpp  k_vector.hpp  vector.hpp
src/lib/vector/k_vector/: k_vector.cpp  k_vector.hpp
src/lib/vfs/: vfs.cpp  vfs.h
src/log/: A++OUTPUT.txt  G++COUTPUT.txt  G++FAILED.txt  G++OUTPUT.txt  GccOUTPUT.txt  LINKOUTPUT.txt  diskimg_creation.txt  imgcreate.txt  isoLOG.txt
tools/: argpass.py  cross-build.sh  mkimg.sh
